Another attempted fix for carousel image stretching/cropping

--- a/style/style.css
+++ b/style/style.css
@@ -83,11 +83,11 @@ nav a:hover {
 }
 
 .all-slides{
-    object-fit: cover;
+    object-fit: contain;
     display: none;
     width: auto;
     height: 75vh;
-    margin: 0 auto 10px auto;
+    margin: 0 auto 10px;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 
